compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__functions__case_clause_then_fault_tolerance.snap
---
source: compiler-core/src_refactored/__core/type_/tests/functions.rs
assertion_line: 446
expression: "\npub fn main() {\n  let wibble = True\n  case wibble {\n    True -> {\n      1.0 + 1.0\n    }\n    _ -> {\n      1.0 + 1.0\n    }\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let wibble = True
  case wibble {
    True -> {
      1.0 + 1.0
    }
    _ -> {
      1.0 + 1.0
    }
  }
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:6:11
  │
6 │       1.0 + 1.0
  │           ^ Use +. instead

The + operator can only be used on Ints.

error: Type mismatch
  ┌─ /src/one/two.gleam:9:11
  │
9 │       1.0 + 1.0
  │           ^ Use +. instead

The + operator can only be used on Ints.
