compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__functions__function_call_incorrect_arity_with_label_shorthand_fault_tolerance.snap
---
source: compiler-core/src_refactored/__core/type_/tests/functions.rs
assertion_line: 366
expression: "\nfn wibble(wibble arg1: fn() -> Int, wobble arg2: Int) -> Int {\n  arg1() + arg2\n}\n\npub fn main() {\n  let wobble = \"\"\n  wibble(wobble:)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn wibble(wibble arg1: fn() -> Int, wobble arg2: Int) -> Int {
  arg1() + arg2
}

pub fn main() {
  let wobble = ""
  wibble(wobble:)
}


----- ERROR
error: Incorrect arity
  ┌─ /src/one/two.gleam:8:3
  │
8 │   wibble(wobble:)
  │   ^^^^^^^^^^^^^^^ Expected 2 arguments, got 1

This call accepts these additional labelled arguments:

  - wibble
