compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__functions__provide_arg_type_to_fn_explicit_error.snap
---
source: compiler-core/src_refactored/__core/type_/tests/functions.rs
assertion_line: 504
expression: "\npub fn main() {\n   let z = #(1,2)\n   fn(x: #(Int, Int)) { x.2 }(z)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
   let z = #(1,2)
   fn(x: #(Int, Int)) { x.2 }(z)
}


----- ERROR
error: Out of bounds tuple index
  ┌─ /src/one/two.gleam:4:26
  │
4 │    fn(x: #(Int, Int)) { x.2 }(z)
  │                          ^^ This index is too large

The index being accessed for this tuple is 2, but this tuple has 2 elements
so the highest valid index is 1.
