compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__functions__provide_two_args_type_to_fn_wrong_types.snap
---
source: compiler-core/src_refactored/__core/type_/tests/functions.rs
assertion_line: 565
expression: "\npub fn main() {\n   let a = 1\n   let b = \"not an int\"\n   fn(x, y) { x + y }(a, b)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
   let a = 1
   let b = "not an int"
   fn(x, y) { x + y }(a, b)
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:5:19
  │
5 │    fn(x, y) { x + y }(a, b)
  │                   ^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    String

Hint: Strings can be joined using the `<>` operator.
